fix(starlight-theme): improve footer

--- a/packages/starlight-theme-bejamas/src/overrides/Footer.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/Footer.astro
@@ -5,39 +5,37 @@ import Pagination from "virtual:starlight/components/Pagination";
 import config from "virtual:starlight/user-config";
 ---
 
-<footer class="sl-flex footer-wide">
+<footer class="sl-flex">
   <div class="meta sl-flex">
     <EditLink />
     <LastUpdated />
   </div>
   <Pagination />
+
+  {
+    config.credits && (
+      <a class="kudos sl-flex" href="https://starlight.astro.build">
+        {Astro.locals.t("builtWithStarlight.label")}
+      </a>
+    )
+  }
+
   <div class="fade"></div>
 </footer>
 
-{
-  config.credits && (
-    <a class="kudos sl-flex footer-wide" href="https://ui.bejamas.com">
-      Built at Bejamas
-    </a>
-  )
-}
-
 <style>
   @layer starlight.core {
-    .footer-wide {
-      width: calc(
-        100% + calc(var(--sl-content-pad-x) * 2) + calc(var(--spacing) * 2)
-      );
-      margin-inline: calc(var(--spacing) * -1 - var(--sl-content-pad-x));
-      padding-inline: calc(var(--sl-content-pad-x) + var(--spacing));
-    }
-
     footer {
       flex-direction: column;
       gap: 1.5rem;
       position: sticky;
       bottom: 0;
+      width: calc(
+        100% + calc(var(--sl-content-pad-x) * 2) + calc(var(--spacing) * 2)
+      );
+      margin-inline: calc(var(--spacing) * -1 - var(--sl-content-pad-x));
       background: linear-gradient(to top, var(--background), transparent);
+      padding-inline: calc(var(--sl-content-pad-x) + var(--spacing));
       padding-block: calc(var(--spacing) * 3);
       z-index: 10;
     }
@@ -49,9 +47,6 @@ import config from "virtual:starlight/user-config";
       }
       .meta {
         display: flex;
-      }
-      .kudos {
-        margin-bottom: calc(var(--spacing) * -10);
       }
     }
 
@@ -72,30 +67,20 @@ import config from "virtual:starlight/user-config";
     .kudos {
       align-items: center;
       gap: 0.5em;
-      margin-block: 0;
+      margin: 1.5rem auto;
       font-size: var(--sl-text-xs);
       text-decoration: none;
-      color: var(--muted-foreground);
-      justify-content: center;
-      padding-top: calc(var(--spacing) * 12);
-      padding-bottom: calc(var(--spacing) * 10);
-      background-color: var(--background);
+      color: var(--sl-color-gray-3);
     }
     .kudos:hover {
-      color: var(--foreground);
-    }
-
-    @media (min-width: 50rem) {
-      .kudos {
-        background-color: transparent;
-      }
+      color: var(--sl-color-white);
     }
 
     .fade {
       --blur: 4px;
       --stop: 50%;
       --height: 72px;
-      position: absolute;
+      position: fixed;
       pointer-events: none;
       width: 100%;
       height: var(--height);
