--- a/templates/astro/src/ui/Button.astro
+++ b/templates/astro/src/ui/Button.astro
@@ -2,9 +2,9 @@
 /**
  * @component Button
  * @title Button
- * @description Displays a button or a component that looks like a button.
+ * @description A clickable element for triggering actions or submitting forms.
  *
- * @example
+ * @preview
  *
  * <div class="flex flex-wrap items-center gap-2 md:flex-row">
  *   <Button>Button</Button>
@@ -19,8 +19,7 @@
  * ---
  * import Button from '@/ui/components/Button.astro';
  * ---
- * ```
- * ```astro
+ *
  * <Button>Click me</Button>
  * ```
  *
@@ -40,7 +39,7 @@
  *
  * ### Variants
  *
- * <div class="flex gap-3 items-center">
+ * <div class="flex flex-col items-start gap-8 sm:flex-row">
  *   <Button variant="default">Default</Button>
  *   <Button variant="secondary">Secondary</Button>
  *   <Button variant="outline">Outline</Button>
@@ -79,7 +78,7 @@
  *
  * <Button variant="default">
  *   Click me
- *   <Badge variant="secondary" shape="pill">Value</Badge>
+ *   <Badge variant="secondary">Value</Badge>
  * </Button>
  *
  * ### Destructive
@@ -142,17 +141,17 @@ const buttonVariants = cva(
         destructive:
           "bg-destructive text-white shadow-xs hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60",
         outline:
-          "border shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50",
+          "border shadow-xs hover:bg-accent hover:border-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50",
         secondary:
           "bg-secondary text-secondary-foreground hover:bg-secondary/80",
-        ghost:
-          "hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50",
-        link: "text-accent-foreground underline-offset-4 hover:underline p-0",
+        ghost: "hover:bg-secondary",
+        link: "text-accent underline-offset-4 hover:underline p-0",
       },
       size: {
-        default: "h-9 px-4 py-2 text-sm has-[.badge:last-child]:pr-1.5 ",
-        sm: "h-8.5 text-xs rounded-lg gap-1.5 px-3.5 has-[>svg]:px-2.5",
-        lg: "h-10 text-sm rounded-lg px-4 has-[>svg]:px-4 has-[.badge:last-child]:pr-3 [&_.badge:last-child]:ml-1.5",
+        default:
+          "h-9 px-3 py-2 text-sm has-[.badge:last-child]:pr-1.5 has-[>svg]:px-2.5",
+        sm: "h-8.5 text-sm rounded-lg gap-1.5 px-3 has-[>svg]:px-2",
+        lg: "h-10 text-sm rounded-lg px-5 has-[>svg]:px-4 has-[.badge:last-child]:pr-3 [&_.badge:last-child]:ml-1.5",
         icon: "size-9",
         "icon-sm": "size-8.5",
         "icon-lg": "size-10",
