--- a/packages/ui/src/components/Footer.astro
+++ b/packages/ui/src/components/Footer.astro
@@ -3,6 +3,7 @@
  * @component Footer
  * @title Footer
  * @description Footer component for the page.
+ * @figmaUrl
  * @status stable
  * @since 0.1.0
  *
