--- a/packages/ui/src/components/NavigationMenu.astro
+++ b/packages/ui/src/components/NavigationMenu.astro
@@ -5,6 +5,7 @@ import { cn } from "@bejamas/ui/lib/utils";
  * @component NavigationMenu
  * @title Navigation Menu
  * @description Responsive navigation menu with support for slots and custom styling.
+ * @figmaUrl 
  * @status stable
  *
  * @preview
