--- a/packages/ui/src/components/StickySurface.astro
+++ b/packages/ui/src/components/StickySurface.astro
@@ -3,6 +3,7 @@
  * @component StickySurface
  * @title Sticky Surface
  * @description A sticky surface component with scroll-based effects (border, shadow, surface swap, shrink, glass).
+ * @figmaUrl 
  * 
  * @preview
  * 
