feat(starlight-theme): add custom theme select component, improve the default styling

--- a/packages/starlight-theme-bejamas/src/overrides/Footer.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/Footer.astro
@@ -14,8 +14,8 @@ import config from "virtual:starlight/user-config";
 
   {
     config.credits && (
-      <a class="kudos sl-flex" href="https://starlight.astro.build">
-        {Astro.locals.t("builtWithStarlight.label")}
+      <a class="kudos sl-flex" href="https://bejamas.com">
+        Built at Bejamas
       </a>
     )
   }
