--- a/packages/starlight-theme-bejamas/src/overrides/Sidebar.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/Sidebar.astro
@@ -1,12 +1,10 @@
 ---
 import MobileMenuFooter from "virtual:starlight/components/MobileMenuFooter";
-import SidebarPersister from "virtual:starlight/components/SidebarPersister.astro";
-import SidebarSublist from "virtual:starlight/components/SidebarSublist.astro";
+import SidebarPersister from "@astrojs/starlight/components/SidebarPersister.astro";
+import SidebarSublist from "@astrojs/starlight/components/SidebarSublist.astro";
 
 const { sidebar } = Astro.locals.starlightRoute;
 ---
-
-ASD
 
 <SidebarPersister>
   <div class="fade"></div>
