--- a/packages/ui/src/components/Select.astro
+++ b/packages/ui/src/components/Select.astro
@@ -116,7 +116,7 @@
  */
 
 import { ChevronDown } from "@lucide/astro";
-import type { HTMLAttributes, HTMLTag } from "astro/types";
+import type { HTMLAttributes } from "astro/types";
 import { cva } from "class-variance-authority";
 import { cn } from "@bejamas/ui/lib/utils";
 
