--- a/apps/web/src/pages/fintech.astro
+++ b/apps/web/src/pages/fintech.astro
@@ -1,12 +1,12 @@
 ---
 import BlockExampleLayout from "@/components/BlockExampleLayout.astro";
 import Button from "@bejamas/ui/components/Button.astro";
-import NavigationMenu from "@bejamas/ui/components/NavigationMenu.astro";
+import NavigationMenu from "@/ui-next/NavigationMenu.astro";
 import MenuDropdown from "@bejamas/ui/components/Dropdown.astro";
 import StickySurface from "@bejamas/ui/components/StickySurface.astro";
 import Breadcrumb from "@bejamas/ui/components/Breadcrumb.astro";
 import Separator from "@bejamas/ui/components/Separator.astro";
-import Footer from "@bejamas/ui/components/Footer.astro";
+import Footer from "@/ui-next/Footer.astro";
 import LinkGroup from "@bejamas/ui/components/LinkGroup.astro";
 import Input from "@bejamas/ui/components/Input.astro";
 import Label from "@bejamas/ui/components/Label.astro";
