fix(docs): import footer from ui-next

--- a/apps/web/src/pages/blocks/footers/footer-1/index.astro
+++ b/apps/web/src/pages/blocks/footers/footer-1/index.astro
@@ -1,6 +1,6 @@
 ---
 import BlockExampleLayout from "@/components/BlockExampleLayout.astro";
-import Footer from "@bejamas/ui/components/Footer.astro";
+import Footer from "@/ui-next/Footer.astro";
 import LinkGroup from "@bejamas/ui/components/LinkGroup.astro";
 import CTA from "./components/cta.astro";
 ---
