fix(docs): update themes

--- a/apps/web/src/components/BrowserHero.astro
+++ b/apps/web/src/components/BrowserHero.astro
@@ -10,13 +10,13 @@ const tabs = [
     preview: "/fintech",
     color: "#e2ebff",
   },
-  {
-    label: "ai",
-    icon: "heart",
-    theme: "tokyo",
-    preview: "/ai",
-    color: "#f1c4e6",
-  },
+  // {
+  //   label: "ai",
+  //   icon: "heart",
+  //   theme: "tokyo",
+  //   preview: "/ai",
+  //   color: "#f1c4e6",
+  // },
   {
     label: "health",
     icon: "heart",
