feat(templates): improve the starter layout

--- a/templates/monorepo-astro-with-docs/apps/web/src/layouts/Layout.astro
+++ b/templates/monorepo-astro-with-docs/apps/web/src/layouts/Layout.astro
@@ -2,9 +2,14 @@
 import "@repo/ui/globals.css";
 ---
 
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>My Astro Project</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>bejamas/ui Astro project</title>
   </head>
   <body>
     <slot />
